add returns errors. some validation problem
